# Cell-Index-Method

./: .gitignore  Cargo.toml  README.md  generate_input_files.py  test_method_time.py
neighbors/: Cargo.toml
neighbors/src/: brute_force_method.rs  cell_index_method.rs  lib.rs
src/: args.rs  cell_index_method.rs  io.rs  main.rs  particle.rs  plot.rs
src/neighbors/: cell_index_method.rs  mod.rs
