[package]
name = "cell_index_method"
version = "0.2.0"
edition = "2021"
authors = ["Juan Negro", "Mauro Sambartolomeo"]
description = "Efficent search of neighbor particles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
neighbors = { path = "neighbors" }
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
plotters = "0.3.4"
simple-error = "0.3.0"
